@@ -1,3 +1,14 @@
+2012-10-23  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r132033.
+        http://trac.webkit.org/changeset/132033
+        https://bugs.webkit.org/show_bug.cgi?id=100097
+
+        Broke calendar picker (Requested by tkent on #webkit).
+
+        * bindings/scripts/CodeGeneratorV8.pm:
+        (GenerateImplementation):
+
 2012-10-23  Andras Becsi  <andras.becsi@digia.com>
 
         Remove devicePixelRatio from ViewportAttributes
